openapi spesification changed + controllers and main
